Finnish localization + added translations

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -7,13 +7,15 @@
     "submit": "Submit"
   },
   "authenticationRequired": "Authentication required",
+  "copiedConfirmation": "Copied!",
   "enterInputAndPressEnter": "Enter input and press \"Enter\"",
   "failedToDownloadExercise": "Failed to download exercise.",
-  "needHelp": "Need help",
+  "needHelp": "Need help?",
   "outputTitle": "Output",
   "running": "Running",
   "sendToTmcPaste": "Send to TMC Paste",
   "selectFile": "Select File",
+  "showAll": "Show all",
   "signInToSubmitExercise": "Sign in to submit exercise",
   "submissionProcessFailed": "Submission process failed",
   "submissionTookTooLong": "Submission was taking a really long time.",
