--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -26,6 +26,7 @@
   "submittingToServer": "Submitting to server",
   "testResults": "Test Results",
   "testsPassed": "Tests passed",
+  "thankYouForFeedback": "Thank you for your feedback!",
   "tmcPasteDescription": "You can submit your code to TMC Paste and share the link to the course discussion channel and ask for help.",
   "viewModelSolution": "View model solution",
   "waitingForInput": "Waiting for input"
