--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -26,6 +26,7 @@
   "submittingToServer": "Lähetetään palvelimelle",
   "testResults": "Testien tulokset",
   "testsPassed": "Testejä läpi",
+  "thankYouForFeedback": "Kiitos palautteesta!",
   "tmcPasteDescription": "Voit lähettää koodisi TMC Pasteen ja jakaa linkin kurssin keskustelukanavilla pyytääksesi apua.",
   "viewModelSolution": "Näytä mallivastaus",
   "waitingForInput": "Odotetaan syötettä"
