--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -9,7 +9,7 @@
   "authenticationRequired": "Sisään kirjautuminen vaaditaan",
   "copiedConfirmation": "Kopioitu!",
   "couldNotFindExerciseDetails": "Tehtävän tietojen hakeminen epäonnistui.",
-  "dontSend": "Ei kiitos",
+  "dontSend": "Älä lähetä",
   "enterInputAndPressEnter": "Anna syöte ja paina \"Enter\"",
   "failedToDownloadExercise": "Tehtävän lataaminen epäonnistui.",
   "feedbackTitle": "Tehtävä suoritettu, onneksi olkoon!",
