--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -7,6 +7,7 @@
     "submit": "Lähetä"
   },
   "authenticationRequired": "Sisään kirjautuminen vaaditaan",
+  "browserNotSupported": "Ohjelmointitehtäviä ei voi suorittaa Microsoft Edge -selaimella.\nVoit käyttää seuraavia selaimia suorittaaksesi tehtäviä:",
   "copiedConfirmation": "Kopioitu!",
   "couldNotFindExerciseDetails": "Tehtävän tietojen hakeminen epäonnistui.",
   "dontSend": "Älä lähetä",
