Output shadow, feedback form UI improvements

--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -17,6 +17,7 @@
   "needHelp": "Tarvitsetko apua?",
   "outputTitle": "Tuloste",
   "running": "Suoritetaan",
+  "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
   "pointsAwarded": "Saadut pisteet",
   "sendToTmcPaste": "Lähetä TMC Pasteen",
   "selectFile": "Valitse tiedosto",
