--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -16,6 +16,7 @@
   "feedbackTitle": "Exercise completed, congratulations!",
   "needHelp": "Need help?",
   "outputTitle": "Output",
+  "pleaseGiveFeedback": "If you wish, you can give feedback on the assignment to help develop the course.",
   "pointsAwarded": "Points awarded",
   "running": "Running",
   "sendToTmcPaste": "Send to TMC Paste",
