Model solution, release 0.7.16

--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -14,6 +14,7 @@
   "enterInputAndPressEnter": "Anna syöte ja paina \"Enter\"",
   "failedToDownloadExercise": "Tehtävän lataaminen epäonnistui.",
   "feedbackTitle": "Tehtävä suoritettu, onneksi olkoon!",
+  "modelSolution": "Mallivastaus",
   "needHelp": "Tarvitsetko apua?",
   "outputTitle": "Tuloste",
   "running": "Suoritetaan",
