--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -14,6 +14,7 @@
   "enterInputAndPressEnter": "Enter input and press \"Enter\"",
   "failedToDownloadExercise": "Failed to download exercise.",
   "feedbackTitle": "Exercise completed, congratulations!",
+  "modelSolution": "Model solution",
   "needHelp": "Need help?",
   "outputTitle": "Output",
   "pleaseGiveFeedback": "If you wish, you can give feedback on the assignment to help develop the course.",
