--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -10,6 +10,7 @@
   "browserNotSupported": "Ohjelmointitehtäviä ei voi suorittaa Microsoft Edge -selaimella.\nVoit käyttää seuraavia selaimia suorittaaksesi tehtäviä:",
   "copiedConfirmation": "Kopioitu!",
   "couldNotFindExerciseDetails": "Tehtävän tietojen hakeminen epäonnistui.",
+  "deadlineExpired": "Tehtävän deadline on ylittynyt.",
   "dontSend": "Älä lähetä",
   "enterInputAndPressEnter": "Anna syöte ja paina \"Enter\"",
   "failedToEstablishConnectionToServer": "Yhteyden muodostaminen TMC-palvelimeen epäonnistui.",
