--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -31,6 +31,7 @@
   "submissionTookTooLong": "Submission was taking a really long time.\nPlease make sure your code doesn't have an infinite loop.",
   "submitting": "Submitting",
   "submittingToServer": "Submitting to server",
+  "testing": "Testing",
   "testResults": "Test Results",
   "testsPassed": "Tests passed",
   "thankYouForFeedback": "Thank you for your feedback!",
