More incompatibility errors, suggest to contact course instructor

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -23,6 +23,7 @@
   "needHelp": "Need help?",
   "outputTitle": "Output",
   "pleaseGiveFeedback": "If you wish, you can give feedback on the assignment to help develop the course.",
+  "pleaseReportFollowingErrorToCourseInstructor": "Please report the following error to your course instructor",
   "pointsAwarded": "Points awarded",
   "running": "Running",
   "sendToTmcPaste": "Send to TMC Paste",
