--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -24,6 +24,7 @@
   "outputTitle": "Tuloste",
   "running": "Suoritetaan",
   "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
+  "pleaseReportFollowingErrorToCourseInstructor": "Ilmoita seuraavasta virheestä kurssin vetäjälle",
   "pointsAwarded": "Saadut pisteet",
   "sendToTmcPaste": "Lähetä TMC Pasteen",
   "selectFile": "Valitse tiedosto",
