Initial Help tooltip, languages, refactor

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -26,15 +26,18 @@
   "pleaseReportFollowingErrorToCourseInstructor": "Please report the following error to your course instructor",
   "pointsAwarded": "Points awarded",
   "running": "Running",
+  "runButtonText": "RUN",
   "sendToTmcPaste": "Send to TMC Paste",
   "selectFile": "Select File",
   "showAll": "Show all",
   "signInToSubmitExercise": "Sign in to submit exercise",
+  "stopButtonText": "STOP",
   "submissionProcessFailed": "Submission process failed",
   "submissionTookTooLong": "Submission was taking a really long time.\nPlease make sure your code doesn't have an infinite loop.",
   "submitting": "Submitting",
   "submittingToServer": "Submitting to server",
   "testing": "Testing",
+  "testButtonText": "TEST",
   "testResults": "Test Results",
   "testsPassed": "Tests passed",
   "thankYouForFeedback": "Thank you for your feedback!",
