--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -26,15 +26,18 @@
   "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
   "pleaseReportFollowingErrorToCourseInstructor": "Ilmoita seuraavasta virheestä kurssin vetäjälle",
   "pointsAwarded": "Saadut pisteet",
+  "runButtonText": "SUORITA",
   "sendToTmcPaste": "Lähetä TMC Pasteen",
   "selectFile": "Valitse tiedosto",
   "showAll": "Näytä kaikki",
   "signInToSubmitExercise": "Kirjaudu sisään palauttaaksesi tehtävän",
+  "stopButtonText": "PYSÄYTÄ",
   "submissionProcessFailed": "Tehtävän lähettäminen epäonnistui",
   "submissionTookTooLong": "Tehtävän lähettäminen kesti liian kauan.\nVarmistathan, että koodissasi ei ole ikuista silmukkaa.",
   "submitting": "Lähetetään",
   "submittingToServer": "Lähetetään palvelimelle",
   "testing": "Ajetaan testejä",
+  "testButtonText": "SUORITA TESTIT",
   "testResults": "Testien tulokset",
   "testsPassed": "Testejä läpi",
   "thankYouForFeedback": "Kiitos palautteesta!",
