--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -21,6 +21,7 @@
   "malformedExerciseTemplate": "Malformed exercise template",
   "modelSolution": "Model solution",
   "needHelp": "Need help?",
+  "noExerciseFilesFound": "No exercise files found in the exercise template.",
   "outputTitle": "Output",
   "pleaseGiveFeedback": "If you wish, you can give feedback on the assignment to help develop the course.",
   "pleaseReportFollowingErrorToCourseInstructor": "Please report the following error to your course instructor",
