Add button for showing template errors

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -16,7 +16,7 @@
   "failedToEstablishConnectionToServer": "Failed to establish a connection to TMC Server.",
   "failedToDownloadExercise": "Failed to download exercise.",
   "feedbackTitle": "Exercise completed, congratulations!",
-  "incompatibleExerciseTemplate": "Incompatible exercise template",
+  "incompatibleExerciseTemplate": "Incompatible exercise template.",
   "infiniteLoopMessage": "Make sure you don't have an infinite loop in your code.",
   "malformedExerciseTemplate": "Malformed exercise template",
   "modelSolution": "Model solution",
@@ -24,8 +24,9 @@
   "noExerciseFilesFound": "No exercise files found in the exercise template.",
   "outputTitle": "Output",
   "pleaseGiveFeedback": "If you wish, you can give feedback on the assignment to help develop the course.",
-  "pleaseReportFollowingErrorToCourseInstructor": "Please report the following error to your course instructor",
+  "pleaseReportFollowingErrorsToCourseInstructor": "Please report following errors to your course instructor",
   "pointsAwarded": "Points awarded",
+  "problemsTitle": "Problems",
   "running": "Running",
   "runButtonText": "RUN",
   "sendToTmcPaste": "Send to TMC Paste",
