--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -16,18 +16,19 @@
   "failedToEstablishConnectionToServer": "Yhteyden muodostaminen TMC-palvelimeen epäonnistui.",
   "failedToDownloadExercise": "Tehtävän lataaminen epäonnistui.",
   "feedbackTitle": "Tehtävä suoritettu, onneksi olkoon!",
-  "incompatibleExerciseTemplate": "Yhteensopimaton tehtäväpohja",
+  "incompatibleExerciseTemplate": "Yhteensopimaton tehtäväpohja.",
   "infiniteLoopMessage": "Varmista, että koodissasi ei ole ikuista silmukkaa.",
   "malformedExerciseTemplate": "Väärän muotoinen tehtäväpohja",
   "modelSolution": "Mallivastaus",
   "needHelp": "Tarvitsetko apua?",
   "noExerciseFilesFound": "Tehtävätiedostoa ei löytynyt tehtäväpohjasta.",
   "outputTitle": "Tuloste",
-  "running": "Suoritetaan",
+  "problemsTitle": "Ongelmat",
   "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
-  "pleaseReportFollowingErrorToCourseInstructor": "Ilmoita seuraavasta virheestä kurssin vetäjälle",
+  "pleaseReportFollowingErrorsToCourseInstructor": "Ilmoita seuraavista virheistä kurssin vetäjälle",
   "pointsAwarded": "Saadut pisteet",
   "runButtonText": "SUORITA",
+  "running": "Suoritetaan",
   "sendToTmcPaste": "Lähetä TMC Pasteen",
   "selectFile": "Valitse tiedosto",
   "showAll": "Näytä kaikki",
@@ -38,7 +39,7 @@
   "submitting": "Lähetetään",
   "submittingToServer": "Lähetetään palvelimelle",
   "testing": "Ajetaan testejä",
-  "testButtonText": "SUORITA TESTIT",
+  "testButtonText": "TESTAA",
   "testResults": "Testien tulokset",
   "testsPassed": "Testejä läpi",
   "thankYouForFeedback": "Kiitos palautteesta!",
