Show initializing status before worker is ready

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -18,6 +18,7 @@
   "feedbackTitle": "Exercise completed, congratulations!",
   "incompatibleExerciseTemplate": "Incompatible exercise template.",
   "infiniteLoopMessage": "Make sure you don't have an infinite loop in your code.",
+  "initializing": "Initializing",
   "malformedExerciseTemplate": "Malformed exercise template",
   "modelSolution": "Model solution",
   "needHelp": "Need help?",
