--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -21,7 +21,7 @@
   "initializing": "Alustetaan",
   "malformedExerciseTemplate": "Väärän muotoinen tehtäväpohja",
   "modelSolution": "Mallivastaus",
-  "needHelp": "Tarvitsetko apua?",
+  "needHelp": "Ongelmia?",
   "noExerciseFilesFound": "Tehtävätiedostoa ei löytynyt tehtäväpohjasta.",
   "outputTitle": "Tuloste",
   "problemsTitle": "Ongelmat",
