--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -4,8 +4,10 @@
     "copy": "Kopioi",
     "run": "Suorita",
     "stop": "Pysäytä",
-    "submit": "Lähetä"
+    "submit": "Palauta",
+    "send": "Lähetä"
   },
+  "allTestsPassed": "Testit menivät läpi!",
   "authenticationRequired": "Sisään kirjautuminen vaaditaan",
   "browserNotSupported": "Ohjelmointitehtäviä ei voi suorittaa Microsoft Edge -selaimella.\nVoit käyttää seuraavia selaimia suorittaaksesi tehtäviä:",
   "copiedConfirmation": "Kopioitu!",
@@ -28,6 +30,7 @@
   "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
   "pleaseReportFollowingErrorsToCourseInstructor": "Ilmoita seuraavista virheistä kurssin vetäjälle",
   "pointsAwarded": "Saadut pisteet",
+  "rememberToSubmitToServer": "Muistathan palauttaa tehtäväväsi palvelimelle arviointia varten.",
   "runButtonText": "SUORITA",
   "running": "Suoritetaan",
   "sendToTmcPaste": "Lähetä TMC Pasteen",
@@ -38,8 +41,9 @@
   "submissionProcessFailed": "Tehtävän lähettäminen epäonnistui",
   "submissionResult": "Arviointi",
   "submissionTookTooLong": "Tehtävän lähettäminen kesti liian kauan.\nVarmistathan, että koodissasi ei ole ikuista silmukkaa.",
-  "submitting": "Lähetetään",
-  "submittingToServer": "Lähetetään palvelimelle",
+  "submitToServerQuestion": "Palautetaanko tehtävä palvelimelle?",
+  "submitting": "Palautetaan",
+  "submittingToServer": "Palautetaan palvelimelle",
   "testing": "Ajetaan testejä",
   "testButtonText": "TESTAA",
   "testResults": "Testien tulokset",
