--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -4,8 +4,10 @@
     "copy": "Copy",
     "run": "Run",
     "stop": "Stop",
-    "submit": "Submit"
+    "submit": "Submit",
+    "send": "Send"
   },
+  "allTestsPassed": "All tests passed!",
   "authenticationRequired": "Authentication required",
   "browserNotSupported": "Programming exercises do not support Microsoft Edge browser.\nYou can use one of the following browsers to complete the exercises:",
   "copiedConfirmation": "Copied!",
@@ -28,6 +30,7 @@
   "pleaseReportFollowingErrorsToCourseInstructor": "Please report following errors to your course instructor",
   "pointsAwarded": "Points awarded",
   "problemsTitle": "Problems",
+  "rememberToSubmitToServer": "Remember to submit your solution to the server for evaluation.",
   "running": "Running",
   "runButtonText": "RUN",
   "sendToTmcPaste": "Send to TMC Paste",
@@ -36,8 +39,9 @@
   "signInToSubmitExercise": "Sign in to submit exercise",
   "stopButtonText": "STOP",
   "submissionProcessFailed": "Submission process failed",
-  "submissionResult": "Assessment",
+  "submissionResult": "Evaluation",
   "submissionTookTooLong": "Submission was taking a really long time.\nPlease make sure your code doesn't have an infinite loop.",
+  "submitToServerQuestion": "Submit exercise to server?",
   "submitting": "Submitting",
   "submittingToServer": "Submitting to server",
   "testing": "Testing",
