--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -15,7 +15,7 @@
   "deadlineExpired": "Exercise deadline exceeded.",
   "dontSend": "Don't send",
   "enterInputAndPressEnter": "Enter input and press \"Enter\"",
-  "failedToEstablishConnectionToServer": "Failed to establish a connection to TMC Server.",
+  "failedToEstablishConnectionToServer": "Failed to establish a connection to TestMyCode Server.",
   "failedToDownloadExercise": "Failed to download exercise.",
   "feedbackTitle": "Exercise completed, congratulations!",
   "incompatibleExerciseTemplate": "Incompatible exercise template.",
@@ -30,7 +30,7 @@
   "pleaseReportFollowingErrorsToCourseInstructor": "Please report following errors to your course instructor",
   "pointsAwarded": "Points awarded",
   "problemsTitle": "Problems",
-  "rememberToSubmitToServer": "Remember to submit your solution to the server for evaluation.",
+  "rememberToSubmitToServer": "Remember to submit your solution for evaluation.",
   "running": "Running",
   "runButtonText": "RUN",
   "sendToTmcPaste": "Send to TMC Paste",
@@ -39,11 +39,11 @@
   "signInToSubmitExercise": "Sign in to submit exercise",
   "stopButtonText": "STOP",
   "submissionProcessFailed": "Submission process failed",
-  "submissionResult": "Evaluation",
+  "submissionResult": "Submissions Results",
   "submissionTookTooLong": "Submission was taking a really long time.\nPlease make sure your code doesn't have an infinite loop.",
-  "submitToServerQuestion": "Submit exercise to server?",
+  "submitToServerQuestion": "Submit exercise?",
   "submitting": "Submitting",
-  "submittingToServer": "Submitting to server",
+  "submittingToServer": "Submitting exercise",
   "testing": "Testing",
   "testButtonText": "TEST",
   "testResults": "Test Results",
