--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -15,7 +15,7 @@
   "deadlineExpired": "Tehtävän deadline on ylittynyt.",
   "dontSend": "Älä lähetä",
   "enterInputAndPressEnter": "Anna syöte ja paina \"Enter\"",
-  "failedToEstablishConnectionToServer": "Yhteyden muodostaminen TMC-palvelimeen epäonnistui.",
+  "failedToEstablishConnectionToServer": "Yhteyden muodostaminen TestMyCode-palvelimelle epäonnistui.",
   "failedToDownloadExercise": "Tehtävän lataaminen epäonnistui.",
   "feedbackTitle": "Tehtävä suoritettu, onneksi olkoon!",
   "incompatibleExerciseTemplate": "Yhteensopimaton tehtäväpohja.",
@@ -30,7 +30,7 @@
   "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
   "pleaseReportFollowingErrorsToCourseInstructor": "Ilmoita seuraavista virheistä kurssin vetäjälle",
   "pointsAwarded": "Saadut pisteet",
-  "rememberToSubmitToServer": "Muistathan palauttaa tehtäväväsi palvelimelle arviointia varten.",
+  "rememberToSubmitToServer": "Muistathan palauttaa ratkaisusi arviointia varten.",
   "runButtonText": "SUORITA",
   "running": "Suoritetaan",
   "sendToTmcPaste": "Lähetä TMC Pasteen",
@@ -39,11 +39,11 @@
   "signInToSubmitExercise": "Kirjaudu sisään palauttaaksesi tehtävän",
   "stopButtonText": "PYSÄYTÄ",
   "submissionProcessFailed": "Tehtävän lähettäminen epäonnistui",
-  "submissionResult": "Arviointi",
+  "submissionResult": "Palautuksen arviointi",
   "submissionTookTooLong": "Tehtävän lähettäminen kesti liian kauan.\nVarmistathan, että koodissasi ei ole ikuista silmukkaa.",
-  "submitToServerQuestion": "Palautetaanko tehtävä palvelimelle?",
+  "submitToServerQuestion": "Palautetaanko tehtävä?",
   "submitting": "Palautetaan",
-  "submittingToServer": "Palautetaan palvelimelle",
+  "submittingToServer": "Palautetaan tehtävää",
   "testing": "Ajetaan testejä",
   "testButtonText": "TESTAA",
   "testResults": "Testien tulokset",
