--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -1,8 +1,9 @@
 {
   "button": {
+    "cancel": "Cancel",
     "close": "Close",
     "copy": "Copy",
-    "ok": "OK",
+    "ok": "Yes",
     "reset": "Reset",
     "run": "Run",
     "stop": "Stop",
@@ -33,7 +34,8 @@
   "pointsAwarded": "Points awarded",
   "problemsTitle": "Problems",
   "rememberToSubmitToServer": "Remember to submit your solution for evaluation.",
-  "resetExerciseConfirmation": "Are you sure you want to reset the exercise to its original content?",
+  "resetExerciseConfirmation": "Are you sure you want to reset the exercise to its initial state?",
+  "resetExerciseNotify": "This operation will download the exercise template and set the exercise to its initial state.",
   "resetExerciseHeader": "Reset exercise template",
   "running": "Running",
   "runButtonText": "RUN",
