Update text on reset

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -35,7 +35,7 @@
   "problemsTitle": "Problems",
   "rememberToSubmitToServer": "Remember to submit your solution for evaluation.",
   "resetExerciseConfirmation": "Are you sure you want to reset the exercise to its initial state?",
-  "resetExerciseNotify": "This operation will download the exercise template and set the exercise to its initial state.",
+  "resetExerciseNotify": "This operation will remove all your code.",
   "resetExerciseHeader": "Reset exercise template",
   "running": "Running",
   "runButtonText": "RUN",
