Not supporting safari, test Edge

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -12,7 +12,7 @@
   },
   "allTestsPassed": "All tests passed!",
   "authenticationRequired": "Authentication required",
-  "browserNotSupported": "Programming exercises do not support Microsoft Edge browser.\nYou can use one of the following browsers to complete the exercises:",
+  "browserNotSupported": "Programming exercises do not support Safari browser.\nYou can use one of the following browsers to complete the exercises:",
   "copiedConfirmation": "Copied!",
   "couldNotFindExerciseDetails": "Could not find exercise details.",
   "deadlineExpired": "Exercise deadline exceeded.",
