Better message when exercise not yet unlocked (#167)

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -18,6 +18,7 @@
   "deadlineExpired": "Exercise deadline exceeded.",
   "dontSend": "Don't send",
   "enterInputAndPressEnter": "Enter input and press \"Enter\"",
+  "exerciseNotYetUnlocked": "Exercise not yet unlocked. Please make sure that you have enough points from previous parts.",
   "failedToEstablishConnectionToServer": "Failed to establish a connection to TestMyCode Server.",
   "failedToDownloadExercise": "Failed to download exercise.",
   "feedbackTitle": "Exercise completed, congratulations!",
