Improve error style and add localizations

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -22,6 +22,7 @@
   "failedToEstablishConnectionToServer": "Failed to establish a connection to TestMyCode Server.",
   "failedToDownloadExercise": "Failed to download exercise.",
   "feedbackTitle": "Exercise completed, congratulations!",
+  "hideFunctionCalls": "Hide function calls",
   "incompatibleExerciseTemplate": "Incompatible exercise template.",
   "infiniteLoopMessage": "Make sure you don't have an infinite loop in your code.",
   "initializing": "Initializing",
@@ -34,6 +35,7 @@
   "pleaseReportFollowingErrorsToCourseInstructor": "Please report following errors to your course instructor",
   "pointsAwarded": "Points awarded",
   "problemsTitle": "Problems",
+  "showFunctionCalls": "Show function calls",
   "rememberToSubmitToServer": "Remember to submit your solution for evaluation.",
   "resetExerciseConfirmation": "Are you sure you want to reset the exercise to its initial state?",
   "resetExerciseNotify": "This operation will remove all your code.",
