--- a/src/locales/common/fi.json
+++ b/src/locales/common/fi.json
@@ -22,6 +22,7 @@
   "failedToEstablishConnectionToServer": "Yhteyden muodostaminen TestMyCode-palvelimelle epäonnistui.",
   "failedToDownloadExercise": "Tehtävän lataaminen epäonnistui.",
   "feedbackTitle": "Tehtävä suoritettu, onneksi olkoon!",
+  "hideFunctionCalls": "Piilota funktiokutsut",
   "incompatibleExerciseTemplate": "Yhteensopimaton tehtäväpohja.",
   "infiniteLoopMessage": "Varmista, että koodissasi ei ole ikuista silmukkaa.",
   "initializing": "Alustetaan",
@@ -31,6 +32,7 @@
   "noExerciseFilesFound": "Tehtävätiedostoa ei löytynyt tehtäväpohjasta.",
   "outputTitle": "Tuloste",
   "problemsTitle": "Ongelmat",
+  "showFunctionCalls": "Näytä funktiokutsut",
   "pleaseGiveFeedback": "Voit halutessasi antaa tehtävästä palautetta auttaaksesi kurssin kehittämisessä.",
   "pleaseReportFollowingErrorsToCourseInstructor": "Ilmoita seuraavista virheistä kurssin vetäjälle",
   "pointsAwarded": "Saadut pisteet",
